--- a/main.css
+++ b/main.css
@@ -1,3 +1,16 @@
-.btn {
-    border:
+.container {
+    display: flex;
+    justify-content: center;
 }
+
+.btn {
+    border: 3px solid black;
+}
+
+.hand {
+    z-index: 1;
+    order: 2;
+    flex-direction: column;
+    padding: 20px;
+    width: 200px;
+    height: 200px;
